schema: Update swagger files
